<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_record"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:theme="@style/Theme.AppCompat.NoActionBar">

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/btnRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fab_colorNormal="@color/primary"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_mic_white_36dp" />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chronometer"
        android:textSize="60sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-light"
        android:layout_alignBottom="@+id/recordProgressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/recordProgressBar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:progressDrawable="@drawable/record_progress_bar"
        android:background="@drawable/record_progress_bar_background"
        android:indeterminate="false"
        android:max="100"
        android:progress="0"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <Button
        android:id="@+id/btnPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:background="#D3190B"
        android:drawableLeft="@drawable/ic_media_pause"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/pause_recording_button"
        android:textAllCaps="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recording_status_text"
        android:text="@string/record_prompt"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-condensed"
        android:layout_above="@+id/btnRecord"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/recording_status_text"
        android:layout_marginBottom="150dp"
        android:gravity="center"
        android:text="00:00"
        android:textColor="#D30A0A"
        android:textSize="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/timeredit"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/set_timer"
        android:textColorHint="#000000"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_above="@+id/recording_status_text"
        android:layout_marginBottom="80dp" />


</RelativeLayout>